Task2_K8sTasks/task2b/ingresscontroller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-postgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # - host: localhost
  -  http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: javawebappsvc
            port: 
              number: 8080
